fixed navbar overflow and add link to nav logo

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -560,8 +560,14 @@ video {
   scrollbar-color: var(--yellow) var(--blue);
 }
 
+html {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
 body {
   width: 100%;
+  max-width: 100vw;
   margin: 0;
   font-family: 'Open Sans', sans-serif;
   color: var(--black);
@@ -727,8 +733,8 @@ section {
     position: absolute;
     content: '';
     height: 4px;
-    right: 0;
-    left: 0;
+    right: -4;
+    left: -4;
     top: calc(100%);
   }
 }
@@ -740,8 +746,8 @@ section {
     position: absolute;
     content: '';
     height: 4px;
-    right: -4px;
-    left: -4px;
+    right: 0px;
+    left: 0px;
     top: 100%;
   }
 }
@@ -1323,7 +1329,13 @@ section {
   padding-top: 1rem;
   padding-bottom: 1rem;
   padding-right: 1.75rem;
-  padding-left: 1.5rem;
+  padding-left: 0.5rem;
+}
+
+@media (min-width: 640px) {
+  .news__text {
+    padding-left: 1.5rem;
+  }
 }
 
 @media (min-width: 1024px) {
